--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "navbar-dropdown-v1",
+  "name": "react-website-v1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,13 +9,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "reinstall": "rm -rf node_modules/ && npm i"
   },
   "eslintConfig": {
     "extends": "react-app"
