--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-website-v1",
-  "homepage": "https://victornguyen75.github.io/react-website-v1",
+  "name": "react-website-1",
+  "homepage": "https://victornguyen75.github.io/react-website-1",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
